{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 27,
  "lineage": "576e80d9-a5fd-8a11-7a51-ff417a63e512",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb-ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:loadbalancer/app/elb-ws/6f58187eae475603",
            "arn_suffix": "app/elb-ws/6f58187eae475603",
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-ws-323441921.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:366345536155:loadbalancer/app/elb-ws/6f58187eae475603",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elb-ws",
            "security_groups": [
              "sg-0848b7d3d782da3d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0472c4c2328f329c5"
              },
              {
                "subnet_id": "subnet-08f1ace08112243de"
              }
            ],
            "subnets": [
              "subnet-0472c4c2328f329c5",
              "subnet-08f1ace08112243de"
            ],
            "tags": {
              "Name": "elb-ws"
            },
            "tags_all": {
              "Name": "elb-ws"
            },
            "vpc_id": "vpc-0b21d32ff760720b0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg_pub",
            "module.vpc.aws_subnet.sn_vpc10_pub_1a",
            "module.vpc.aws_subnet.sn_vpc10_pub_1c"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lis_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:listener/app/elb-ws/6f58187eae475603/cba1c665afae32ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:targetgroup/elb-aws/fe0f51cc7bad4f0d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:366345536155:listener/app/elb-ws/6f58187eae475603/cba1c665afae32ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:loadbalancer/app/elb-ws/6f58187eae475603",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_lb.elb-ws",
            "module.ec2.aws_lb_target_group.elb-aws",
            "module.ec2.aws_security_group.sg_pub",
            "module.vpc.aws_subnet.sn_vpc10_pub_1a",
            "module.vpc.aws_subnet.sn_vpc10_pub_1c"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elb-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:366345536155:targetgroup/elb-aws/fe0f51cc7bad4f0d",
            "arn_suffix": "targetgroup/elb-aws/fe0f51cc7bad4f0d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:366345536155:targetgroup/elb-aws/fe0f51cc7bad4f0d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "elb-aws",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "elb-aws"
            },
            "tags_all": {
              "Name": "elb-aws"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:security-group/sg-032e0fe3077cc0230",
            "description": "Security Group private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032e0fe3077cc0230",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_priv",
            "name_prefix": "",
            "owner_id": "366345536155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_priv"
            },
            "tags_all": {
              "Name": "sg_priv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:security-group/sg-0848b7d3d782da3d5",
            "description": "Security Group public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0848b7d3d782da3d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP/22 from All",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP/80 from All",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_pub",
            "name_prefix": "",
            "owner_id": "366345536155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_pub"
            },
            "tags_all": {
              "Name": "sg_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:internet-gateway/igw-0819fd085ed638e54",
            "id": "igw-0819fd085ed638e54",
            "owner_id": "366345536155",
            "tags": {
              "Name": "igw_vpc10"
            },
            "tags_all": {
              "Name": "igw_vpc10"
            },
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_vpc10_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:route-table/rtb-0ee96be3eda736bbc",
            "id": "rtb-0ee96be3eda736bbc",
            "owner_id": "366345536155",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_vpc10_priv"
            },
            "tags_all": {
              "Name": "rt_vpc10_priv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_vpc10_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:route-table/rtb-0f8ae9030c5f3398a",
            "id": "rtb-0f8ae9030c5f3398a",
            "owner_id": "366345536155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0819fd085ed638e54",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_vpc10_pub"
            },
            "tags_all": {
              "Name": "rt_vpc10_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_vpc10",
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sa_priv_1a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea6054d478e86cfb",
            "route_table_id": "rtb-0ee96be3eda736bbc",
            "subnet_id": "subnet-06aa9f1d7da5e5d28"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt_vpc10_priv",
            "module.vpc.aws_subnet.sn_vpc10_priv_1a",
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sa_priv_1c_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a2b7c5b303f053d",
            "route_table_id": "rtb-0ee96be3eda736bbc",
            "subnet_id": "subnet-05ebef2268072ce75"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt_vpc10_priv",
            "module.vpc.aws_subnet.sn_vpc10_priv_1c",
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sa_pub_1a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09959748a74106d23",
            "route_table_id": "rtb-0f8ae9030c5f3398a",
            "subnet_id": "subnet-08f1ace08112243de"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_vpc10",
            "module.vpc.aws_route_table.rt_vpc10_pub",
            "module.vpc.aws_subnet.sn_vpc10_pub_1a",
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sa_pub_1c_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a91a930699c4e2b",
            "route_table_id": "rtb-0f8ae9030c5f3398a",
            "subnet_id": "subnet-0472c4c2328f329c5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_vpc10",
            "module.vpc.aws_route_table.rt_vpc10_pub",
            "module.vpc.aws_subnet.sn_vpc10_pub_1c",
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:subnet/subnet-06aa9f1d7da5e5d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aa9f1d7da5e5d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366345536155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_priv_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1a"
            },
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:subnet/subnet-05ebef2268072ce75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ebef2268072ce75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366345536155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_priv_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1c"
            },
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:subnet/subnet-08f1ace08112243de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f1ace08112243de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366345536155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1a"
            },
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:subnet/subnet-0472c4c2328f329c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0472c4c2328f329c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366345536155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1c"
            },
            "vpc_id": "vpc-0b21d32ff760720b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366345536155:vpc/vpc-0b21d32ff760720b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09978e1675a63ce18",
            "default_route_table_id": "rtb-0bc1aa23acf6ba548",
            "default_security_group_id": "sg-0bbb05f674abcda69",
            "dhcp_options_id": "dopt-04a2a8fb71e213c08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b21d32ff760720b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc1aa23acf6ba548",
            "owner_id": "366345536155",
            "tags": {
              "Name": "vpc10"
            },
            "tags_all": {
              "Name": "vpc10"
            }
          }
        }
      ]
    }
  ]
}